# Legacy fallback for older pip/setuptools versions.
# Primary configuration is in pyproject.toml.
[metadata]
name = Repository-Mapper
version = 0.6.9
# Updated minor version to reflect folder changes

[options]
py_modules = cli
packages = graph, scanner, exporters

[options.entry_points]
console_scripts =
    repomap = cli:main
